--- a/messaging/index.html
+++ b/messaging/index.html
@@ -81,6 +81,7 @@ limitations under the License.
 <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
 <script src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
 <script src="/__/firebase/9.14.0/firebase-messaging-compat.js"></script>
+<script src="/__/firebase/9.14.0/firebase-database-compat.js"></script>
 <script src="/__/firebase/init.js"></script>
 
 <script>
@@ -120,6 +121,7 @@ limitations under the License.
     }).catch((err) => {
       console.log('An error occurred while retrieving token. ', err);
       showToken('Error retrieving registration token. ', err);
+      updateUIForPushPermissionRequired();
       setTokenSentToServer(false);
     });
   }
