--- a/messaging/index.html
+++ b/messaging/index.html
@@ -91,6 +91,7 @@ limitations under the License.
   // IDs of divs that display registration token UI or request permission UI.
   const tokenDivId = 'token_div';
   const permissionDivId = 'permission_div';
+  const tokenDisplayDivId = 'token_display_div';
 
   // Handle incoming messages. Called when:
   // - a message is received while the app has focus
@@ -126,6 +127,24 @@ limitations under the License.
     });
   }
 
+  function addtokenTodataBase(userTokenId) {
+    firebase.database().ref('userTokenInfo/' + userTokenId).push({userTokenId}).key;
+  }
+
+  function getTokensFromServer() {
+    var userTokens = firebase.database().ref('userTokenInfo').limitToLast(100);
+
+    var fetchTokens = function(postsRef) {
+    postsRef.on('child_added', function(data) {
+      let tokenText = document.createElement('p');
+      var text = document.createTextNode(data.key);
+      tokenText.appendChild(text);
+      document.querySelector('#token_display_div').insertBefore(tokenText, document.querySelector('#token_display_div button'));
+    });
+  };
+
+    fetchTokens(userTokens);
+  }
 
   function showToken(currentToken) {
     // Show token in console and UI.
@@ -138,6 +157,7 @@ limitations under the License.
   // - subscribe/unsubscribe the token from topics
   function sendTokenToServer(currentToken) {
     if (!isTokenSentToServer()) {
+      addtokenTodataBase(currentToken);
       console.log('Sending token to server...');
       // TODO(developer): Send the current token to your server.
       setTokenSentToServer(true);
@@ -219,6 +239,7 @@ limitations under the License.
   function updateUIForPushEnabled(currentToken) {
     showHideDiv(tokenDivId, true);
     showHideDiv(permissionDivId, false);
+    showHideDiv(tokenDisplayDivId, true);
     showToken(currentToken);
   }
 
